--- a/.develop.env
+++ b/.develop.env
@@ -1,5 +1,5 @@
 PORT=8000
-DATABASE_HOST= 
-DATABASE_PORT=3355
+DATABASE_HOST='localhost'
+DATABASE_PORT=5432
 DATABASE_USER='root'
 DATABASE_PASSWORD='admin123'
