--- a/.develop.env
+++ b/.develop.env
@@ -1,5 +1,8 @@
-PORT=8000
+PORT=3000
+
+#config database
 DATABASE_HOST='localhost'
 DATABASE_PORT=5432
-DATABASE_USER='root'
-DATABASE_PASSWORD='admin123'
+DATABASE_USER=postgres
+DATABASE_PASSWORD='123root'
+DATABASE_NAME='blogdb'
