--- a/.develop.env
+++ b/.develop.env
@@ -6,3 +6,10 @@ DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD='123root'
 DATABASE_NAME='blogdb'
+DB_DIALECT=postgres
+
+//JWT
+JWTKEY=random_secret_key
+JWT_SECRET=asdasdasd
+TOKEN_EXPIRATION=48h
+BEARER=Bearer
