--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.11",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
