--- a/.develop.env
+++ b/.develop.env
@@ -1,12 +1,15 @@
 PORT=3000
 
-#config database
+#config database local
 DATABASE_HOST='localhost'
 DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD='123root'
 DATABASE_NAME='blogdb'
 DB_DIALECT=postgres
+
+//config database production
+
 
 //JWT
 JWT_SECRET=random_secret_key
