--- a/.develop.env
+++ b/.develop.env
@@ -2,7 +2,7 @@ PORT=3000
 
 #config database local
 DATABASE_HOST='localhost'
-DATABASE_PORT=5436
+DATABASE_PORT=5432
 DATABASE_USER=postgres
 DATABASE_PASSWORD='123root'
 DATABASE_NAME='blogdb'
@@ -15,3 +15,7 @@ DB_DIALECT=postgres
 JWT_SECRET=random_secret_key
 TOKEN_EXPIRATION=48h
 BEARER=Bearer
+
+//frontend endpoint
+
+FRONTEND_ENDPOINT='localhost'
