--- a/.develop.env
+++ b/.develop.env
@@ -7,6 +7,7 @@ DATABASE_USER=postgres
 DATABASE_PASSWORD='123root'
 DATABASE_NAME='blogdb'
 DB_DIALECT=postgres
+DATABASE_LOGGING='false'
 
 //config database production
 
