added decorator to make public endpoints

--- a/.develop.env
+++ b/.develop.env
@@ -8,7 +8,7 @@ DATABASE_PASSWORD='123root'
 DATABASE_NAME='blogdb'
 DB_DIALECT=postgres
 DB_SSL=true
-DATABASE_LOGGING='false'
+DATABASE_LOGGING=false
 
 //config database production
 
