--- a/.develop.env
+++ b/.develop.env
@@ -12,6 +12,10 @@ DATABASE_LOGGING=false
 
 //config database production
 
+//config Cloudinary
+CLOUD_NAME=dfj9dgmex
+API_KEY=143319577485451
+API_SECRET=t4RZe84iDbvXVhbhulHalIkWkfg
 
 //JWT
 JWT_SECRET=random_secret_key
