--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.11",
     "bcrypt": "^5.1.1",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^2.0.3",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.1",
     "passport": "^0.6.0",
@@ -50,6 +52,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/passport-local": "^1.0.35",
