--- a/.develop.env
+++ b/.develop.env
@@ -13,9 +13,9 @@ DATABASE_LOGGING=false
 //config database production
 
 //config Cloudinary
-CLOUD_NAME=dfj9dgmex
-API_KEY=143319577485451
-API_SECRET=t4RZe84iDbvXVhbhulHalIkWkfg
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
 
 //JWT
 JWT_SECRET=random_secret_key
