added login with google and fix fetch comments

--- a/.develop.env
+++ b/.develop.env
@@ -32,3 +32,8 @@ EMAIL_HOST=
 EMAIL_PORT=
 EMAIL_USER=
 EMAIL_PASS=
+
+//config google 
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_CALLBACK_URL=
