--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/jwt": "^10.1.1",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/passport": "^10.0.2",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/sequelize": "^10.0.0",
     "@nestjs/swagger": "^7.1.11",
@@ -36,10 +36,12 @@
     "class-validator": "^0.14.0",
     "cloudinary": "^2.0.3",
     "dotenv": "^16.3.1",
+    "google-auth-library": "^9.7.0",
     "handlebars": "^4.7.8",
     "mysql2": "^3.6.1",
     "nodemailer": "^6.9.12",
     "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.11.3",
@@ -58,8 +60,9 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.14",
-    "@types/passport-jwt": "^3.0.9",
-    "@types/passport-local": "^1.0.35",
+    "@types/passport-google-oauth2": "^0.1.8",
+    "@types/passport-jwt": "^3.0.13",
+    "@types/passport-local": "^1.0.38",
     "@types/sequelize": "^4.28.15",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
